--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1198,7 +1198,7 @@ white = #fff
 	right 5px
 	color white
 	cursor pointer
-	
+
 .work-card-options
 	position absolute
 	top 0
@@ -2198,7 +2198,7 @@ white = #fff
 	box-sizing border-box
 	padding-top 30px
 	padding-bottom 30px
-	
+
 	.invitation-cover
 		height 300px
 		margin-bottom 40px
@@ -2209,7 +2209,7 @@ white = #fff
 		font-size 24px
 		color #0c0c0c
 		text-align center
-	
+
 	.invitation-subTitle
 		font-family 'Montserrat', sans-serif
 		font-size 18px
@@ -2219,7 +2219,7 @@ white = #fff
 		margin 20px auto
 		&.underline
 			text-decoration underline
-			
+
 	.invitation-button
 		font-family 'Montserrat', sans-serif
 		font-weight bold
@@ -2230,7 +2230,7 @@ white = #fff
 		padding 20px 40px
 		display table
 		margin 30px auto
-		
+
 
 	.separator
 		font-family 'Montserrat', sans-serif
@@ -2250,7 +2250,7 @@ white = #fff
 			text-align center
 			font-size 15px
 			line-height: 1.25;
-			
+
 	.title
 		font-family 'Montserrat', sans-serif
 		font-size 14px
@@ -2263,12 +2263,12 @@ white = #fff
 			a
 				text-decoration underline
 				color charcoal-grey
-				
+
 	.subtitle
 		font-family: 'PT Serif', serif;
 		font-size 14px
 		color #333
-		
+
 	.check-title
 		font-family: 'PT Serif', serif;
 		font-size 14px
@@ -2458,7 +2458,7 @@ white = #fff
 				a
 					text-decoration underline
 					color #333
-					
+
 			.seller-button
 				border solid 1px #333
 				border-radius 3px
@@ -2480,7 +2480,7 @@ white = #fff
 						background #3bd64a
 					&:not(:first-child)
 						margin-left 10px
-					
+
 
 		&-main-title
 			font-size 18px
@@ -2510,14 +2510,14 @@ white = #fff
 				&-subtitle
 					font-family: 'PT Serif', serif;
 					font-size 12px
-					color warm-grey 
+					color warm-grey
 					padding-bottom 3px
 				&-description
 					line-height 1.15
 					font-family 'Montserrat', sans-serif
 					font-size 10px
 					color charcoal-grey
-			
+
 			.information-center
 				line-height 1.25
 				font-family 'Montserrat', sans-serif
@@ -2550,7 +2550,7 @@ white = #fff
 							text-align left
 						.right
 							font-family: 'PT Serif', serif;
-							
+
 				a
 					color #333
 					text-decoration underline
@@ -2558,7 +2558,7 @@ white = #fff
 					margin auto
 				p
 					margin-bottom 5px
-					
+
 			&.type2
 				.information-left
 					padding-left 20px
@@ -2570,7 +2570,7 @@ white = #fff
 		display flex
 		input:first-child
 			width 60px
-			
+
 @media (min-width: 630px)
 	.am-profile-box
 		padding 60px 60px !important
@@ -3199,7 +3199,7 @@ white = #fff
 			font-family: 'PT Serif', serif;
 			font-size 12px
 			color #838c8e
-		
+
 		.type2
 			display flex
 			justify-content space-between
@@ -3452,7 +3452,7 @@ white = #fff
 	position relative
 	// &.product
 	// 	height: 250px;
-		
+
 	.nextButton
 		position absolute
 		right 0
@@ -3557,7 +3557,7 @@ white = #fff
 				border solid 1px #bac5c7
 				border-radius 4px
 				.address
-					// cursor pointer 
+					// cursor pointer
 					padding 10px
 					display flex
 					align-items center
@@ -5291,7 +5291,7 @@ white = #fff
 		background-size: cover;
 		background-position: center center;
 		position relative
-		
+
 		.controls
 			position absolute
 			right 0
@@ -5324,7 +5324,7 @@ white = #fff
 			max-width 200px
 		.textarea
 			min-height 75px
-		
+
 		.checks
 			font-family: 'PT Serif', serif;
 			font-size 13px
@@ -5332,7 +5332,7 @@ white = #fff
 			display: flex;
 			align-items: center;
 			padding: 8px 0;
-		
+
 		.prices
 			font-family: 'Montserrat',sans-serif;
 			font-size 12px
@@ -5352,7 +5352,7 @@ white = #fff
 				padding: 13px 10px;
 				min-width 200px
 				text-align center
-		
+
 		.back-color
 			display flex
 			justify-content space-between
@@ -5367,7 +5367,7 @@ white = #fff
 				font-family: 'Montserrat',sans-serif;
 				color #333
 				font-size 14px
-				
+
 		.size-work
 			display flex
 			align-items center
@@ -5426,7 +5426,7 @@ white = #fff
 					color #9b9b9b
 					padding-top 3px
 					// padding-bottom 7px
-								
+
 		.title
 			font-family: 'Montserrat',sans-serif;
 			font-size 14px
@@ -5440,7 +5440,7 @@ white = #fff
 			line-height 1.2
 			a
 				text-decoration underline
-				color warm-grey 
+				color warm-grey
 		.subtitle-mall
 			font-family: 'Montserrat', sans-serif;
 			font-size 12px
@@ -5466,7 +5466,7 @@ white = #fff
 		.sizes
 			max-width 200px
 			margin 30px auto 0 auto
-			
+
 		.help-button
 			font-family: 'PT Serif', serif;
 			font-size 12px
@@ -5495,8 +5495,7 @@ white = #fff
 		display flex
 		img
 			margin auto
-			max-height: 100%;
-			width: auto;
+			height auto
 		.background
 			position absolute
 			width 100%
@@ -5545,7 +5544,7 @@ white = #fff
 		width: 480px;
 		.sales-button
 			margin: 10px;
-			
+
 
 @keyframes load
 	0%
@@ -5603,7 +5602,7 @@ white = #fff
 	display flex
 	flex-direction column
 	align-items center
-		 
+
 .contact-form
 	background charcoal-grey
 	.title
@@ -5637,7 +5636,7 @@ white = #fff
 			padding 10px 15px
 		textarea
 			min-height 153px
-		
+
 		button
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
@@ -5693,7 +5692,7 @@ white = #fff
 			width 48px
 			min-width 48px
 			margin 5px
-			
+
 .am-profile-box
 	.edit-options
 		font-family: 'Montserrat',sans-serif;
