--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5297,6 +5297,7 @@ white = #fff
 			right 0
 			background white
 			i
+				cursor pointer
 				display block
 				padding 20px 15px
 				border-left solid 1px #dddddd
