add scroll to collection modal

--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -334,7 +334,7 @@
 
 	{% include '../../partials/inform.html' %}
 
-	<div id="collection-modal" style="display:none;">
+	<div id="collection-modal" style="display:none; max-height: 400px; overflow-y: auto; overflow-x: hidden;">
 		<i class="closed-modal fa fa-times"></i>
 
 		<div class="actions-box add-collection">
