--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -29,7 +29,7 @@
 												</div>
 												<div class="grid-66">
 													<p class="address-label">Dirección de Envío</p>
-													<input class="address-input" placeholder="Tus apellidos" value={{user.direction}}>
+													<input class="address-input" placeholder="Direccion de envio" value="{{user.direction}}">
 												</div>
 												<div class="grid-33">
 													<p class="address-label">Int/Apartamento</p>
