add preload in sell view

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -689,6 +689,7 @@
 				<div class="options">
 					<a class="sales-button white">CANCELAR</a>
 					<a class="sales-button create-btn">PONER EN VENTA</a>
+					<a class="sales-button create-btn"><i class="fa fa-spinner"></i></a>
 				</div>
 			</div>
 		</div>
