--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5502,10 +5502,9 @@ white = #fff
 			width 100%
 			height 100%
 			display flex
-			// img
-			// 	margin auto
-			// 	max-height: 100%;
-			// 	width: auto;
+		.image-preview
+			max-height: 100%;
+			
 	.title
 		font-size: 18px;
 		font-family: 'Montserrat',sans-serif;
