add good bye view

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2335,6 +2335,8 @@ white = #fff
 			background #225b99
 		&[data-color="green"]
 			background #3bd64a
+		&[data-color="red"]
+			background #ff6666
 		&.upload
 			color #3a3d3f
 			background white
@@ -5726,3 +5728,25 @@ white = #fff
 		a
 			text-decoration underline
 			color charcoal-grey
+
+.detele-link
+	font-family: 'Montserrat',sans-serif;
+	font-size 14px
+	color #899598
+	text-decoration underline
+	text-align center
+	margin auto
+	padding-top 20px
+	display table
+
+.delete-account-form
+	.title
+		color #0c0c0c
+	.delete-buttons
+		margin-top 30px
+		display flex
+		flex-wrap wrap
+		justify-content space-around
+		.button
+			max-width 170px
+			text-align center
