--- a/app/views/partials/account-menu.html
+++ b/app/views/partials/account-menu.html
@@ -7,7 +7,7 @@
 					<div class="am-Filter-item">
 						<ul class="am-Filter-subOptions">
 							<a href="/user/{{user.username}}/account/" class="profile">Mis datos de perfil</a>
-							<a href="/user/{{user.username}}/account/configuration/" class="configuration">Configuración</a>
+							<!-- <a href="/user/{{user.username}}/account/configuration/" class="configuration">Configuración</a> -->
 							<a href="/user/{{user.username}}/account/orders" class="orders">Mis compras</a>
 							<!-- <a href="#" class="directions">Mis direcciones de envío</a> -->
 							<a href="/user/{{user.username}}/account/password" class="password">Cambiar contraseña</a>
