--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -233,12 +233,56 @@
 						<div class="grid-100 save-loading hide mobile-grid-100">
 							<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
 						</div>
+
+						<a id="go-share-modal" href="#share-modal" class="detele-link">Quiero eliminar mi cuenta</a>
+
 					</form>
 				</div>
 			</div>
 		</div>
 
 	</div>
+
+	<div id="share-modal" style="display: none;">
+		<i class="closed-modal fa fa-times"></i>
+
+		<div class="am-profile" style="padding: 0;">
+
+			<div class="grid-container" style="padding: 0;">
+				<div class="grid-100 grid-parent">
+
+					<div class="am-profile-box grid-container">
+						<form class="complete-form delete-account-form">
+
+							<div class="separator main u-margin-top-30">
+								<span class="line" style="height: 2px;"></span>
+								<span class="text">ELIMINAR CUENTA EN ARTEMANIFIESTO.COM</span>
+								<span class="line" style="height: 2px;"></span>
+							</div>
+
+							<div class="grid-100 mobile-grid-100">
+								<p class="title comfirm">
+									¿Estas realmente seguro de eliminar tu cuenta?
+									<br><br>
+									Tus datos, obras y estadísticas serán borrados
+									para siempre :(
+								</p>
+							</div>
+
+							<div class="grid-100 mobile-grid-100">
+								<div class="delete-buttons">
+									<a href="" class="button green u-margin-top-5" data-color="green">CANCELAR</a>
+									<a href="" class="button red u-margin-top-5" data-color="red">SI, ELIMINAR CUENTA</a>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 {% endblock %}
 {% block scripts %}
 	<script>
@@ -254,6 +298,8 @@
 		$('.account-title').click(function () {
 			$('.am-Filter.account.mobile').toggleClass('visible')
 		})
+
+		$('#go-share-modal').leanModal();
 	});
 	</script>
 {% endblock %}
