add hover efect in single work tabs

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3274,7 +3274,9 @@ white = #fff
 			color #333
 		i
 			font-size 1.25em
-
+		&:hover
+			background: white;
+			transition: background-color 0.3s ease-out;
 
 
 .actions
