--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -14,9 +14,10 @@
 
 
         <a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
-          <div class="product-card-image" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
+          <img src="<%= addFilter(photo, 'w_300,h_300,c_limit') %>">
+          <!-- <div class="product-card-image" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_limit') %>')"></div>
           <div class="product-card-price"><%= finalPrice %></div>
-          <div class="product-card-zoom" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
+          <div class="product-card-zoom" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_limit') %>')"></div> -->
         </a>
 
       </div>
