config and canvas column type changed

--- a/app/views/pages/new-landing.html
+++ b/app/views/pages/new-landing.html
@@ -54,49 +54,113 @@
 		</div>
 	</div>
 
-	<!-- ********************************************************************
-		$ MARKET GRID
-	********************************************************************* -->
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-70">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-30">
-				<div class="market-grid-element"></div>
-			</div>
-		</div>
-	</div>
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-30">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-70">
-				<div class="market-grid-element"></div>
+		<!-- ********************************************************************
+			$ MARKET GRID
+		********************************************************************* -->
+		<div class="market-grid">
+			<div class="grid-container">
+				<div class="grid-66 mobile-grid-100">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-1.png">
+					</div>
+				</div>
+				<div class="grid-33 mobile-grid-50 market-grid-desktop">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249383/general/home-banner-2.png">
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-100">
-				<div class="market-grid-element"></div>
+
+		<div class="market-grid market-grid-mobile">
+			<div class="grid-container">
+				<div class="grid-50 mobile-grid-50">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-2.png">
+					</div>
+				</div>
+				<div class="grid-50 mobile-grid-50">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249383/general/home-banner-3.png">
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
+
+		<div class="market-grid">
+			<div class="grid-container">
+				<div class="grid-33 mobile-grid-50 market-grid-desktop">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-3.png">
+					</div>
+				</div>
+				<div class="grid-66 mobile-grid-100">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-4.png">
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
+
+		<div class="market-grid">
+			<div class="grid-container">
+				<div class="grid-100">
+					<div class="market-grid-element background" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-5.png');">
+						<div class="inner">
+							<p class="title">Regístrate y descubre arte recomendado a tu medida</p>
+							<br><br>
+							<p class="subtitle">Cuanto más interactues con tus obras y artistas favoritos, te recomendaremos el arte que más te gusta.
+							<br>
+							¿Qué esperas?</p>
+							<br><br><br>
+							<a class="am-View-button green">REGÍSTRATE AHORA</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="market-grid">
+			<div class="grid-container">
+				<div class="grid-33 mobile-grid-50">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-6.png">
+					</div>
+				</div>
+				<div class="grid-33 mobile-grid-50">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-7.png">
+					</div>
+				</div>
+				<div class="grid-33 mobile-grid-50">
+					<div class="market-grid-element">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-8.png">
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="u-separator-center" style="margin: 50px auto;"></div>
+
+		<div class="market-grid">
+			<div class="grid-container">
+				<div class="grid-100">
+					<div class="market-grid-element background" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1461249379/general/home-banner-9.png');">
+						<div class="inner">
+							<p class="title dark">UNA NUEVA FORMA DE DESCUBRIR ARTE</p>
+							<br><br>
+							<p class="subtitle dark">2,000 artistas y 10,000 obras esperan ser descubiertas por tí
+							<br>
+							Artemanifiesto.com es mucho más que una galería en línea.
+							<br>
+							Nuestra misión, es democratizar el arte</p>
+							<br><br><br>
+							<a class="am-View-button">DESCUBRE AHORA</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 {% endblock %}
 
